# cli-draw

./: .gitignore  220309  README.md  main.py  pyproject.toml  save.txt
.github/workflows/: release.yml
docs/: uv_guides_scripts.md
src/cli_draw/: __main__.py  app.py  config.py
